[rewrite] Add `Java8toJava11`
Signed-off-by: Vincent Potucek <vpotucek@me.com>

Changes have been made to spring-webmvc/src/test/java/org/springframework/web/servlet/resource/GzipSupport.java by:
    org.openrewrite.java.migrate.UpgradeToJava17
        org.openrewrite.java.migrate.Java8toJava11
            org.openrewrite.java.migrate.nio.file.PathsGetToPathOf
                org.openrewrite.java.ChangeMethodTargetToStatic: {methodPattern=java.nio.file.Paths get(..), fullyQualifiedTargetTypeName=java.nio.file.Path}
                org.openrewrite.java.ChangeMethodName: {methodPattern=java.nio.file.Path get(..), newMethodName=of}
Changes have been made to spring-webmvc/spring-webmvc.gradle by:
    org.openrewrite.java.migrate.UpgradeToJava17
        org.openrewrite.java.migrate.Java8toJava11
            org.openrewrite.java.migrate.javax.AddJaxbDependenciesWithRuntime
                org.openrewrite.java.migrate.javax.AddJaxbAPIDependencies
                    org.openrewrite.java.dependencies.RemoveDependency: {groupId=com.sun.xml.bind, artifactId=jaxb-core}
                org.openrewrite.java.migrate.javax.AddJaxbRuntime: {runtime=glassfish}
Changes have been made to spring-websocket/src/main/java/org/springframework/web/socket/handler/ConcurrentWebSocketSessionDecorator.java by:
    org.openrewrite.java.migrate.UpgradeToJava17
        org.openrewrite.java.migrate.lang.StringFormatted: {addParentheses=false}
Changes have been made to spring-websocket/src/main/java/org/springframework/web/socket/CloseStatus.java by:
    org.openrewrite.java.migrate.UpgradeToJava17
        org.openrewrite.staticanalysis.AddSerialAnnotationToSerialVersionUID
Changes have been made to spring-websocket/src/main/java/org/springframework/web/socket/sockjs/transport/handler/HtmlFileTransportHandler.java by:
    org.openrewrite.java.migrate.UpgradeToJava17
        org.openrewrite.java.migrate.lang.StringFormatted: {addParentheses=false}
Changes have been made to spring-websocket/src/main/j